--- a/Level 1 Task 1/index.html
+++ b/Level 1 Task 1/index.html
@@ -46,7 +46,7 @@
           </div>
         </div>
         <div class="col-md-6 d-none d-md-block">
-          <img src="education-vector-image.png" alt="Education Vector Image" class="img-fluid">
+          <img src="hero-img.png" alt="Hero Image" class="img-fluid">
         </div>
       </div>
     </div>
@@ -79,7 +79,7 @@
       <div class="row">
         <div class="col-md-4">
           <div class="course-box">
-            <img src="web-dev.png" alt="Front END" class="img-fluid">
+            <img src="course-img.png" alt="Front END" class="img-fluid">
             <h4 style="font-weight: bold;">Front-End Web Development Mastery</h4>
             <p style="text-align: justify;">Elevate your web design skills with our Front-End Development Masterclass.
               Dive into the world of HTML, CSS, and JavaScript to craft stunning and responsive user interfaces.
@@ -89,7 +89,7 @@
         </div>
         <div class="col-md-4">
           <div class="course-box">
-            <img src="web-dev.png" alt="Back END" class="img-fluid">
+            <img src="course-img.png" alt="Back END" class="img-fluid">
             <h4 style="font-weight: bold;">Backend Development Mastery</h4>
             <p style="text-align: justify;">Unlock the secrets of server-side programming in our Backend Wizardry
               course. From databases to server management, learn the skills needed to create robust and scalable web
@@ -100,7 +100,7 @@
         </div>
         <div class="col-md-4">
           <div class="course-box">
-            <img src="web-dev.png" alt="MERN Stack" class="img-fluid">
+            <img src="course-img.png" alt="MERN Stack" class="img-fluid">
             <h4 style="font-weight: bold;">MERN Stack Mastery: Full-Stack Excellence</h4>
             <p style="text-align: justify;">Become a Full-Stack Jedi with our MERN Stack Mastery course. Explore the
               power of MongoDB, Express.js, React, and Node.js as you build modern web applications. Harness the
